...
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/text_dialog">


    <Button
        android:id="@+id/btn_ok_dialog"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:background="@color/DeepSkyBlue"
        android:textColor="#ffffffff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="214dp"
        app:layout_constraintHorizontal_bias="0.942" />

        <Button
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_ok_dialog"
            android:background="@color/DeepSkyBlue"
            android:textColor="#ffffffff"
            app:layout_constraintLeft_toLeftOf="parent"
...
