...
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.625" />

        <CheckBox
            android:id="@+id/near_distance"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/settings_items_borders"
            android:defaultValue="true"
            android:onClick="onCheckboxClickedMode"
            android:text="@string/walke_mode"
            android:textColor="@color/MintCream"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.997" />

        <CheckBox
            android:id="@+id/from_anywhere"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@drawable/settings_items_borders"
            android:defaultValue="false"
            android:onClick="onCheckboxClickedMode"
            android:text="@string/anywhere_mode"
...
